src/public/css/game.css
.worker-holder {
    height: 35px;
    width: 35px;
}

.small-worker {
    height: 25px;
    width: 25px;
}

.unlockCity {
    background-color: palegoldenrod;
}

.city {
    border: solid;
    display: flex;
    position: relative;
    flex-direction: column;
}

.cityPieceArea {
    display: flex;
    flex-direction: row;
}

.cityPieceHolder {
    display: flex;
    align-items: center;
    justify-content: center;
}

.freePoint {
    background-color: goldenrod;
    text-shadow: 1px 1px 2px black;
    color: whitesmoke;
    font-size: 200%;
    /*The font size was 275% before */
}

/* ------------------------------------ Bonus piece --------------------------- */
.bonusBox {
    height: 35px;
    width: 35px;
    background-color: white;
    border: dotted;
    flex-wrap: wrap;
    font-size: 70%;
}
.bonusPiece {
    height: 15px;
    width: 15px;
}

.routeBox {
    display: flex;
    flex-direction: column;
}

.routeNode {
    position: relative;
    border: solid;
    display: flex;
    align-items: center;
    background-color: #F0F0F0;
}

.board {
    border: dashed;
    background-color: bisque;
    border-color: chocolate;
    overflow: scroll;
    width: 100%;
    height: 650px;
    /* Should un-comment this TODO here! */
    /* height: 100%; */
    /* display: none; just while doing desk*/

}

.playerArea {
    border: solid;
    border-color: black;
}

.playerDeskArea {
    border: solid;
    border-color: black;
}

#turnTracker {
    font-weight: bold;
}

.playerBox {
    border: dotted;
}

.actionBar {
    display: flex;
    padding: 5px;
}

#actionInfo {
    display: flex;
    min-height: 20px;
}

.warningText {
    font-style: italic;
}

.pointTrackerSection {
    height: 35px;
    display: flex;
    /* TODO uncomment this here!*/
    /* display: none; */
    align-items: center;
    justify-content: center;

}

.pointPieceContainer {
    height: 33px;
    width: 33px;
    font-size: 12px;
    border: solid;
    margin: 1px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.pointTrackerPiece {
    background-color: blueviolet;
    height: 7px;
    width: 7px;
    margin: 1px;
}

.collapseButton {
    position: absolute;
    top: 10px;
    right: 10px;
}

.gameLog {
    /* overflow: scroll; */
    overflow: auto;
    height: 200px;
    border: solid;
}

/* ------------------- EAST WEST POINTS ------------------ */
.eastWestTerminus {
    background-color: lightcoral;
}

#eastWestTracker {
    height: 200px;
    width: 130px;
    background-color: lightcoral;
    border-color: black;
    border-style: solid;
}

.eastWestHolder {
    background-color: goldenrod;
}

.eastWestLine {
    /* need to apply a rotational transform and add the color black */
    margin: 5px;
    transform: rotate(-45deg);
    transform-origin: 50px 50px;
    position: relative;
}

#eastWestPieceArea {
    margin: 2px;
}

/* ---------------------------- Coellen Special Area --------------------------------------*/

#coellenSpecialArea {
    justify-content: space-evenly;
    border-radius: 30px;
    height: 85px;
    width: 200px;
    background-color: yellow;
    font-size: 13px;
}

.coellenPoint {
    text-shadow: 1px 1px 2px chocolate;
    color: whitesmoke;
    font-size: 275%;
}

/* ---------------------------- Endgame Score Modal --------------------------------------*/
#scoreModal {
    top: 10%;
    left: 0;
    right: 0;
    margin-inline: auto;
    height: 60%;
    width: 80%;
    border: solid;
    border-color: chocolate;
    border-width: 5px;
    border-radius: 30px;
    background-color: whitesmoke;
    position: absolute;
}

#scoreModalBanner {
    margin: 20px;
}

#scoreTable {
    table-layout: auto;
    width: 100%;
    height: 70%;
}

td {
    text-align: center;
}


/* Player Info Desk and Components */
.playerInfoDesk {
    background-color: bisque;
    border: solid;
    height: 500px;
    width: 950px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    /* will get rid of height and width eventually */
}

.playerInfoDeskBanner {
    text-align: center;
    font-weight: bold;
    width: 100%;
    margin: 2px;
    font-size: 30px;
}

#playerDeskAreaIncludingButton {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.arrowButton {
    text-align: center;
    font-weight: bold;
    width: 100px;
    height: 100px;
    margin: 2px;
    border-style: solid;
}

#boardComponentBanner {
    height: 20%;
    text-align: center;
    font-weight: bold;
    width: 100%;
    margin: 2px;
}

.keysTracker {
    display: flex;
    margin: 10px;
}

.keysDiv {
    height: 70px;
    width: 35px;
    margin: 2px;
}

.actionTracker {
    display: flex;
    margin: 10px;
}

.actionsDiv {
    height: 90px;
    width: 70px;
    margin: 2px;
    background-color: wheat;
}

.tokenTracker {
    border-radius: 50%;
    height: 120px;
    width: 120px;
    margin: 2px;
    background-color: grey;
    display: flex;
    align-items: center;
    justify-content: center;
}

.tokenHolder {
    border-radius: 50%;
    height: 80px;
    width: 80px;
    background-color: grey;
    border: solid;
    font-weight: bold;
    font-size: 200%;
}

.colorTracker {
    height: 120px;
    width: 31%;
    margin: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    background-color: wheat;
}

.colorsDiv {
    margin: 2px;
    height: 30px;
    width: 30px;
}

.movesTracker {
    display: flex;
    margin: 10px;
    width: 31%;
    background-color: wheat;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.maxMovementDiv {
    height: 70px;
    width: 50px;
    margin: 2px;
}

.purseTracker {
    width: 31%;
    ;
    display: flex;
    margin: 10px;
}

.purseDiv {
    height: 90px;
    width: 70px;
    margin: 2px;
    background-color: wheat;
}

.unlockableShape {
    transform: rotate(45deg);
    height: 20px;
    width: 20px;
    background-color: aliceblue;
    display: flex;
    align-items: center;
    justify-content: center;
}

.unlockableShapeColors {
    height: 20px;
    width: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.lockedShape {
    height: 15px;
    width: 15px;
}

.supplyArea {
    height: 120px;
    width: 45%;
    background-color: aquamarine;
    border: solid;
}

.bankArea {
    height: 120px;
    width: 45%;
    background-color: peachpuff;
    border: solid;
}

.tokenDropdownHolder {
    height: 75px;
    width: 75px;
    background-color: silver;
    margin: 2px;
    text-align: center;
    font-size: 65%;
    visibility: hidden;
}

.tooltipText {
    visibility: hidden;
    position: absolute;
    z-index: 1;
    min-width: 80px;
    min-height: 120px;
    background-color: black;
    color: white;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    font-size: 13px;
}

.tooltip:hover .tooltipText {
    visibility: visible;
}

/* pieceTracker is used by both bank and supply */
.pieceTracker {
    /* probably just need flex and nothing else
    might need direction and wrap*/
    display: flex;
    flex-direction: row;
}

.tinyPiece {
    height: 15px;
    width: 15px;
    margin: 2px;
}

.onBoardToken {
    height: 55px;
    width: 55px;
    position: relative;
    background-color: silver;
    display: flex;
    visibility: hidden;
    font-size: 60%;
    align-items: center;
    text-align: center;
}

/* Utility Classes */
.centeredFlex {
    display: flex;
    align-items: center;
    justify-content: center;
}

.circle {
    border-radius: 50%;
    margin: 1px
}

.square {
    margin: 1px;
}

.collapsedContainer {
    display: none !important;
    overflow: hidden;
    background-color: #f1f1f1;
}

.collapsibleContainer {
    position: relative;
    min-height: 30px;
    min-width: 970px;
}

.banner {
    text-align: center;
    font-weight: bold;
    width: 100%;
}


.testSinglePixel {
    height: 5px;
    width: 5px;
    background-color: chartreuse;
    position: absolute;
    z-index: 10;
}

.testBigPixel {
    height: 10px;
    width: 10px;
    background-color: magenta;
    position: absolute;
    z-index: 10;
}

